Fix: Profile header: on small screens, the space at the left and the … (#7301)
* Fix: Profile header: on small screens, the space at the left and the right of the image must be equal

* Add PR ID to CHANGELOG

---------

--- a/static/less/mobile.less
+++ b/static/less/mobile.less
@@ -133,7 +133,7 @@
 
         .panel-profile .panel-profile-header .img-profile-data {
             padding-top: 50px !important;
-            padding-left: 130px;
+            padding-left: 125px;
         }
     }
 
