--- a/themes/HumHub/css/theme.css
+++ b/themes/HumHub/css/theme.css
@@ -4941,7 +4941,7 @@ a.label-warning:hover {
   }
   #layout-content .panel-profile .panel-profile-header .img-profile-data {
     padding-top: 50px !important;
-    padding-left: 130px;
+    padding-left: 125px;
   }
   .modal-dialog {
     width: calc(100vw - 4px) !important;
